<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">mathquest</string>
    <string name="Start">Startzahl</string>
    <string name="Ziel">Ziel</string>
    <string name="Buttonplus">+</string>
    <string name="Buttonminus">-</string>
    <string name="Buttongeteilt">/</string>
    <string name="Buttonmal">*</string>
    <string name="menu_levelEins">Level 1</string>
    <string name="menu_levelZwei">Level 2</string>
    <string name="menu_levelDrei">Level 3</string>
    <string name="menu_levelVier">Level 4</string>
    <string name="menu_levelFuenf">Level 5</string>
    <string name="menu_hauptMenu">Hauptmenü</string>
    <string name="ausgabe">0</string>
    <string name="Ergebnis">Ergebnis</string>
    <string name="Ergebnisanzeige">0</string>
    <string name="reset">reset</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_eins">EinsActivity</string>
    <string name="gewonnen">geschafft!</string>
    <string name="verloren">Probiers noch einmal!</string>
    <string name="finalMessage">Gratulation du hast alle 5 Prüfungen nach der Reihe bestanden! "nächster Level" startet ein neues Spiel </string>
    <string name="finalMessage2">Gratulation du hast den schwersten mathquest Level geschafft! "nächster Level" startet ein neues Spiel</string>
    <string name="menuHighscore">wenigste Resets: </string>
    <string name="Schritte">Schritte</string>
    <string name="Zeit">Zeit</string>
    <string name="title_activity_zeit">ZeitActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_ranking">ranking</string>
    <string name="Highscore">Highscore</string>
    <string name="Platz1">Platz1</string>
    <string name="Platz2">Platz2</string>
    <string name="Platz3">Platz3</string>
    <string name="Platz4">Platz4</string>
    <string name="Platz5">Platz5</string>
    <string name="Platz6">Platz6</string>
    <string name="Platz7">Platz7</string>
    <string name="Platz8">Platz8</string>
    <string name="Platz9">Platz9</string>
    <string name="Platz10">Platz10</string>



</resources>
